POM: generate module-aware Javadocs compatible with Java 11.